<resources>
    <string name="app_name">MyDoc</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="remember_me">Remember me</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="go">Go</string>

    <string name="splash_icon">splash_icon</string>
    <string name="mydoc">MyDoc</string>
    <string name="sign_me_up">sign up</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="name">Name</string>
    <string name="todo">To do</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="medical_history">Medical History</string>
    <string name="search_doctors">Search Doctors</string>
    <string name="upcoming_appointments">upcoming appointments</string>

    <string name="welcome_john">Welcome, John</string>

    <string name="book_an_appointment">Book an appointment</string>
    <string name="book">Book</string>
    <string name="your_medical_history">Your medical history</string>
    <string name="height_cm">Height (cm)</string>
    <string name="weight_lbs">Weight (lbs)</string>
    <string name="medications">Medications</string>
    <string name="add">+</string>
    <string name="allergies">Allergies</string>
    <string name="add2">+</string>
    <string name="do_you_smoke">Do you smoke?</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="health_issues">Health issues</string>
    <string name="add1">+</string>
    <string name="save">Save</string>
    <string name="no_upcoming_appointments">No upcoming appointments</string>
    <string name="upcoming_appointments2">Upcoming appointments</string>
    <string name="search_for_a_doctor">Search for a doctor</string>
    <string name="upcoming_appointments3">upcoming_appointments</string>
    <string name="no_upcoming_appointments2">no_upcoming_appointments</string>
    <string name="upcoming_appointmentss">Upcoming appointments</string>
    <string name="no_upcoming_appointmentsss">No upcoming appointments</string>
</resources>
