<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/my_doc_background"
    tools:context=".LogIn">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="1dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="normal|bold|italic" />

    <CheckBox
        android:id="@+id/rememberMeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/logInBtn"
        android:layout_marginTop="11dp"
        android:checked="false"
        android:text="@string/remember_me"
        android:textColor="@android:color/black"
        android:textColorLink="@color/colorPrimary" />

    <TextView
        android:id="@+id/passwordTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"

        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userName"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="5dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:cursorVisible="false" />

    <EditText
        android:id="@+id/userName"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="5dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingTop="7dp"
        android:paddingBottom="7dp" />


    <ImageView
        android:id="@+id/docIcon"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_below="@+id/passwordTag"
        android:src="@drawable/doc_icon" />


    <Button
        android:id="@+id/logInBtn"
        android:layout_width="298dp"
        android:layout_height="50dp"
        android:layout_below="@+id/password"
        android:layout_alignStart="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:layout_alignEnd="@+id/password"
        android:layout_alignRight="@+id/password"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:background="@color/colorAccent"
        android:elevation="0dp"
        android:onClick="onLoginBtnClick"
        android:text="@string/log_in"
        android:textColor="@android:color/white"
        android:textSize="17dp" />

    <Button
        android:id="@+id/signUpLinkBtn"
        android:layout_width="125dp"
        android:layout_height="30dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"
        android:onClick="onSignUpLinkBtnClick"
        android:text="@string/sign_up"
        android:textColor="@android:color/background_light"
        android:textSize="13sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_below="@+id/rememberMeCheckBox"
        android:layout_alignEnd="@+id/rememberMeCheckBox"
        android:layout_alignRight="@+id/rememberMeCheckBox"
        android:layout_toEndOf="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:background="@color/common_google_signin_btn_text_dark_focused"
        android:text="@string/forgot_your_password"
        android:textSize="8sp" />

</RelativeLayout>