<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="95dp"
        android:layout_height="73dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="15dp"
        app:srcCompat="@drawable/doc_icon" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:text="@string/your_medical_history"
        android:textSize="24sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider4"
        android:layout_width="250dp"
        android:layout_height="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="106dp"
        android:layout_marginLeft="106dp"
        android:layout_marginTop="71dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="148dp"
        android:layout_marginLeft="148dp"
        android:layout_marginTop="118dp"
        android:text="@string/height_cm"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="91dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="147dp"
        android:layout_marginLeft="147dp"
        android:layout_marginTop="142dp"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView6"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:text="@string/weight_lbs"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="91dp"
        android:layout_height="31dp"
        android:layout_alignTop="@+id/editText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="282dp"
        android:layout_marginLeft="282dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView6"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-123dp"
        android:layout_marginTop="185dp"
        android:text="@string/medications"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="26dp"
        android:layout_marginBottom="329dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="44dp"
        android:layout_height="28dp"
        android:layout_alignEnd="@+id/textView5"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="358dp"
        android:background="@color/colorAccent"
        android:text="@string/add"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/spinner2"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="278dp"
        android:text="@string/allergies"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="238dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="44dp"
        android:layout_height="28dp"
        android:layout_alignBottom="@+id/textView9"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="54dp"
        android:layout_marginRight="54dp"
        android:layout_marginBottom="0dp"
        android:background="@color/colorAccent"
        android:text="@string/add2"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/spinner3"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="198dp"
        android:text="@string/do_you_smoke"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView10"
        android:layout_alignEnd="@+id/textView5" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/spinner3"
        android:layout_alignTop="@+id/textView6"
        android:layout_marginStart="-12dp"
        android:layout_marginTop="0dp"
        android:text="@string/date_of_birth"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="91dp"
        android:layout_height="31dp"
        android:layout_alignStart="@+id/spinner2"
        android:layout_alignBottom="@+id/textView8"
        android:layout_marginStart="-11dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/spinner3"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="142dp"
        android:text="Health issues" />

    <View
        android:id="@+id/divider5"
        android:layout_width="300dp"
        android:layout_height="5dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="127dp"
        android:background="@color/colorAccent" />

    <Spinner
        android:id="@+id/spinner4"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="96dp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="44dp"
        android:layout_height="28dp"
        android:layout_alignEnd="@+id/divider4"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="137dp"
        android:background="@color/colorAccent"
        android:text="+"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button10"
        android:layout_width="307dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginBottom="28dp"
        android:background="@color/colorAccent"
        android:text="Save"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="18sp"
        android:textStyle="bold" />


</RelativeLayout>