<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_doc_background">

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="89dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="66dp"
        android:layout_height="73dp"
        android:layout_alignStart="@+id/calendarView"
        android:layout_alignLeft="@+id/calendarView"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/doc_icon" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/book_an_appointment"
        android:textSize="24sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider3"
        android:layout_width="250dp"
        android:layout_height="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="64dp"
        android:background="@color/colorAccent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="88dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp" />

    <Button
        android:id="@+id/bookBtn"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginBottom="19dp"
        android:background="@color/colorAccent"
        android:onClick="onBookBtnClick"
        android:text="@string/book"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textStyle="bold" />
</RelativeLayout>